posts controller and views and added cloudinary

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+body{
+  width: 900px;
+  text-align: center;
+}
+.field{
+  margin: 10px;
+  height: 25px;
+  width: 200px;
+}
