--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,19 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= cloudinary_js_config %>
   </head>
 
   <body>
+    <nav>
+        <% if @current_user.present?%>
+          Welcome, <%= @current_user.username%>
+          |
+        <%= link_to 'Logout', login_path, method: :delete%>
+        <% else %>
+          <%= link_to 'login', login_path%>
+        <% end %>
+      </nav>
     <%= yield %>
   </body>
 </html>
