--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,18 +16,162 @@
 
  img {
    max-width: 300px;
-
  }
 
  li {
    list-style: none;
+ }
 
-body{
-  width: 900px;
-  text-align: center;
+.sidebar:hover {
+  transform: scale(1.2);
 }
-.field{
+
+#city_body {
+
+}
+
+#welcome {
+  margin: 0 auto;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+#login_form {
+  text-align: center;
+  background-color: rgba(250, 250, 250, 0.4);
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  width:30em;
+  height:18em;
+  margin-top: -9em; /*set to a negative number 1/2 of your height*/
+  margin-left: -15em; /*set to a negative number 1/2 of your width*/
+  border: 1px solid black;
+  border-radius: 15px;
+
+
+}
+
+.field {
   margin: 10px;
   height: 25px;
   width: 200px;
 }
+
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+#wrapper {
+  position: absolute;
+  width: 30%;
+  height: 100%;
+  overflow: hidden;
+}
+
+label {
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+}
+
+.menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  width: 240px;
+  height: 100%;
+  transform: translate3d(-240px, 0, 0);
+  transition: transform 0.35s;
+  background-color: rgba(250, 250, 250, 0.9);
+}
+
+  label.menu-toggle {
+    position: absolute;
+    right: -60px;
+    width: 60px;
+    height: 60px;
+    line-height: 0px;
+    display: block;
+    padding: 0;
+    text-indent: -9999px;
+    background-image: url('https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png');
+    background-repeat: no-repeat;
+    background-color: rgba(250, 250, 250, 0.9);
+    background-size: contain;
+    border-radius: 0px 0px 15px 0px;
+  }
+
+  ul
+    li
+      > label {
+        background-image: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-right-b-128.png');
+        background-repeat: no-repeat;
+      }
+      a, label {
+        display: block;
+        text-align: center;
+        padding: 0 20px;
+        line-height: 60px;
+        text-decoration: none;
+        color: #000;
+        &:hover {
+          color: #666
+        }
+      }
+
+
+/* hide inputs */
+.menu-checkbox {
+  display: none;
+}
+
+/* hide navigation icon for sublabels */
+.menu .menu label.menu-toggle {
+  background: none;
+}
+
+/* fade in checked menu */
+.menu-checkbox:checked + .menu {
+  transform: translate3d(0, 0, 0);
+}
+
+
+
+/* for show */
+html, body {
+  height: 100%;
+}
+
+body {
+  background-image: url('https://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+
+h1 {
+  color: #fff;
+  border: 3px solid #fff;
+  text-align: center;
+  background: rgba(0,0,0,0.1);
+  font-size: 22px;
+  font-weight: normal;
+  padding: 20px;
+  margin: 10px;
+  display: inline-block;
+}
+  strong {
+    display: block;
+    font-size: 26px;
+  }
