--- a/app/assets/stylesheets/cities.scss
+++ b/app/assets/stylesheets/cities.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the Cities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+img{
+  height: 250px;
+  width: 250px;
+}
+.cities_individual{
+  overflow: auto;
+  display: inline-block;
+  max-width: 290px;
+  margin: 5px;
+}
+#cities_div:hover{
+  opacity: 0.6;
+  border: 2px solid black;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: none;
+}
