--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,4 +1,4 @@
-<div id="city_body">
+<div id="content_body">
   <h2>Beautiful Cities of the World</h2>
   <% @cities.each do |city| %>
     <div class="cities_individual" id="cities_div">
