--- a/app/views/cities/edit.html.erb
+++ b/app/views/cities/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Cities#edit</h1>
-<p>Find me in app/views/cities/edit.html.erb</p>
+<h2>Edit <%= @city.name %></h2>
+<%= render partial: "form"%>
