--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,15 @@
-<h1><%= @post.title%></h1>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <% if @post.image.present? %>
-        <%= cl_image_tag @post.image %>
-      <% else %>
-        <%= cl_image_tag "no_image.png" %>
-      <% end %>
-      <p>
+  <h1><%= @post.title%></h1>
+  <% if @is_admin %>
+  <%= link_to "Edit", edit_post_path(@post)%>
+  <%= link_to "Delete", post_path(@post), method: :delete%>
+  <% end %>
+  <div class="content_box">
+        <div class="image_show">
+          <% if @post.image.present? %>
+            <%= cl_image_tag @post.image %>
+          <% else %>
+            <%= cl_image_tag "no_image.png" %>
+          <% end %>
+        </div>
         <%= @post.content%>
-      </p>
-
-        <%=  link_to "Edit", edit_post_path(@post)%>
-        |
-        <%=  link_to "Delete", post_path(@post), method: :delete%>
-
-
-    </div>
   </div>
-</div>
