Fix css styling to wrap in wrapper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,10 @@
 
         <span class="menu"></span>
 
+        <div class="content_body">
+          <%= yield %>
+        </div>
+
         <div class="overlay">
             <ul>
               <li>
@@ -42,9 +46,6 @@
 
         <div class="footer">Project 2 for WDI 27. By Anna Tran & Bhagavathi Chirra.
         </div>
-  </div>
-  <div id="content_body">
-    <%= yield %>
   </div>
 
 </body>
