--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,36 +26,39 @@ img:hover {
 }
 
 #slideshow {
-    margin: 50px auto;
+    // margin: 50px auto;
     position: relative;
     // width: 240px;
     // height: 240px;
-    width: 700px;
-    height: 500px;
+    left: 10%;
+    // previously 700/500
+    width: 900px;
+    height: 610px; // 552 +30 + 20 + 8 - Previously 700
     padding: 10px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    // box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 
 #slideshow > div {
     position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
+    top: 4px;
+    left: 4px;
+    right: 4px;
+    bottom: 4px;
 }
 
 .slideshow_images {
-  max-width: 660px;
-  width: 660px;
-  max-height: 460px;
-  height: 460px;
+  // previously 660/460
+  max-width: 792px;
+  width: 792px;
+  max-height: 552px;
+  height: 552px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
 }
 
 .image_show {
   float: left;
-  width: 250px;
-  height: 250px;
-  margin-right: 15px;
+  width: 270px;
+  height: 270px;
   overflow: hidden;
 }
 
@@ -68,6 +71,10 @@ img:hover {
 
 li {
   list-style: none;
+}
+
+.edit_link {
+  font-size: 18px;
 }
 
 html, body {
@@ -175,6 +182,7 @@ body {
       padding-left: 300px;
       width: calc(100% - 320px);
       padding-right: 20px;
+      padding-top: 10px;
       text-align: center;
       float: right;
       right: 0px;
@@ -188,7 +196,7 @@ body {
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 30px;   /* Height of the footer */
+      height: 25px;   /* Height of the footer */
       background-color: rgba(187, 187, 187, 0.8);
     }
 
@@ -204,6 +212,7 @@ body {
 
       h1 {
         color: #b3b5b5;
+
       }
     }
 
