--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,13 +4,17 @@
 img{
   height: 250px;
   width: 250px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  margin: 10px;
+  border-radius: 5px;
 }
 
 .posts_individual{
   overflow: auto;
   display: inline-block;
   max-width: 290px;
-  margin: 5px;
+  margin: 2px;
+
 }
 
 #posts_div:hover{
