--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,14 +179,20 @@ body {
     }
 
     .content_body {
-      padding-left: 300px;
-      width: calc(100% - 320px);
+      // padding-left: 300px;
+      // width: calc(100% - 320px);
+      width: calc(100% - 40px);
+      padding-left: 20px;
       padding-right: 20px;
       padding-top: 10px;
       text-align: center;
       float: right;
       right: 0px;
       min-height: 100%;
+      &.small_content {
+        padding-left: 300px;
+        width: calc(100% - 320px);
+      }
     }
 
     .footer {
