--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,16 +13,22 @@
  *= require_tree .
  *= require_self
  */
-
+//
 img {
   max-width: 300px;
-  filter: saturate(40%);
+  filter: grayscale(70%) contrast(100%);
+  transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
 
 }
 
-img:hover {
-  opacity: 1.5;
 
+img:hover{
+  filter: saturate(80%);
+}
+
+a {
+  list-style: none;
 }
 
 #slideshow {
@@ -151,7 +157,7 @@ body {
       z-index: 9999;
       position: absolute;
       top: 20px;
-      left: 10px;
+      left: 30px;
       width: 35px;
       height: 4px;
       // background: black;
@@ -181,10 +187,12 @@ body {
     .content_body {
       // padding-left: 300px;
       // width: calc(100% - 320px);
+
       width: calc(100% - 40px);
       padding-left: 20px;
       padding-right: 20px;
-      padding-top: 10px;
+      padding-top: 20px;
+      padding-bottom: 10px;
       text-align: center;
       float: right;
       right: 0px;
@@ -203,7 +211,7 @@ body {
       bottom: 0;
       width: 100%;
       height: 25px;   /* Height of the footer */
-      background-color: rgba(187, 187, 187, 0.8);
+      background-color: rgba(187, 187, 187, 0.5);
     }
 
     .title {
@@ -234,7 +242,7 @@ body {
       &.anim {
         left: 0;
         bottom: 0;
-        animation: menu-anim 1.5s 1 ease-out normal;
+        animation: menu-anim 0.5s 1 ease-out normal;
         width: 25%;
         transition: all 0.5s ease;
 
@@ -259,6 +267,7 @@ body {
         li {
           margin: 10px 0;
 
+
           a {
             text-decoration: none;
             color: rgba(42, 42, 42, 0.8);
@@ -266,6 +275,8 @@ body {
             display: inline-block;
             padding: 10px 0;
             overflow: hidden;
+
+
 
             &:after {
               display: block;
