--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -150,7 +150,7 @@ html, body {
 }
 
 body {
-  background-image: url('https://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg');
+  /* background-image: url('https://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg'); */
   background-size: cover;
   background-attachment: fixed;
 }
