--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,7 +11,7 @@ img{
   display: inline-block;
   max-width: 290px;
   margin: 5px;
-  
+
 
 }
 #posts_div:hover{
@@ -25,4 +25,9 @@ li {
 
 a {
   color: none;
+}
+#txt_area_comments{
+  margin-left: 100px;
+  height: 50px;
+  width: 800px;
 }
