--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,7 @@
 
 
   </head>
-
-  <body>
+  <body class="<%= controller_name %> <%=  action_name %>">
     <div class="wrapper">
 
         <span class="menu"></span>
