--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -3,8 +3,8 @@
   <div class="cities_individual" id="cities_div">
     <strong><%= link_to city_path(city) do %></strong><br>
       <div>
-        <%= city.name %>
-        <%= image_tag city.image %>
+        <li class="city_link"><%= city.name %></li>
+        <li><%= image_tag city.image %></li>
       </div>
     </div>
     <% end %>
