welcome page parallax scrolling

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
   <% end %>
 </ol>
 <% end %>
-
+<div id="login_div">
 <%= form_for @user do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
