--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-
-<div id="articles" data-article="<%= @user.address %>">Loading...</div>
+<h3>Hello <%= @user.username %>!</h3>
+<!-- <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div> -->
