--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,12 +14,99 @@
  *= require_self
  */
 //
+//
+// html, body {
+//   font-family: Open Sans;
+//   font-size: 18px;
+//   line-height: 28px;
+// }
+
+
+// homepage display parallax scrolling
+#welcome_page {
+  letter-spacing: -15px;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 170px;
+  font-weight: 600;
+  line-height: 200px;
+}
+
+.MainContainer {
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.ContentContainer {
+  position: relative;
+  display: block;
+  background-color: white;
+  z-index: 1;
+  width: 1355px;
+  margin-left: 7px;
+}
+
+.Content {
+  max-width: 850px;
+  margin: 0 auto;
+  padding: 35px 0;
+}
+
+p {
+  margin: 75px 0;
+}
+
+.ParallaxContainer {
+  display: flex;
+  flex: 1 0 auto;
+  position: relative;
+  z-index: -1;
+  height: 50vh;
+  width: 1355px;
+  justify-content: center;
+  align-items: center;
+  transform: translateZ(-1px) scale(2);
+  background: url('http://www.victorianielsens.se/wp-content/uploads/2017/10/travel.jpg');
+  background-size: cover;
+  background-color: rgb(250,228, 216);
+}
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
+
+
+.MainContainer {
+  perspective: 1px;
+  transform-style: preserve-3d;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.ParallaxContainer {
+  display: flex;
+  flex: 1 0 auto;
+  position: relative;
+  height: 107vh;
+  transform: translateZ(-1px) scale(2);
+  z-index: -1;
+}
+
+.ContentContainer {
+  display: block;
+  position: relative;
+  background-color: white;
+  z-index: 1;
+}
+
 img {
   max-width: 300px;
   filter: grayscale(70%) contrast(100%);
   transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
   box-shadow: 0 0 15px rgba(0,0,0,0.4);
-
 }
 
 
@@ -30,17 +117,19 @@ img:hover{
 a {
   text-decoration: none;
 }
-a:hover {
-  color: rgb(90, 17, 198);
-}
 
 .city_link {
   color: rgba(42, 42, 42, 0.8);
   font-weight: bold;
 }
 
-.city_link:hover {
+.city_link:hover, #article:hover, a:hover {
   color: rgb(90, 17, 198);
+}
+
+#articles {
+  font-size: 16px;
+  color: rgba(42, 42, 42, 0.8);
 }
 
 #slideshow {
@@ -82,8 +171,10 @@ a:hover {
 
 .content_box {
   overflow: hidden;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 50px;
+  padding-left: 50px;
   vertical-align: middle;
 }
 
@@ -104,6 +195,10 @@ h2 {
   padding-bottom: 20px;
 
 }
+
+// #welcome_page {
+//   font-size: 40px;
+// }
 
 #welcome {
   margin: 0 auto;
@@ -186,6 +281,8 @@ body {
         background: rgba(42, 42, 42, 0.8);
       }
 
+
+
       &:before {
         top: -8px;
       }
@@ -195,6 +292,7 @@ body {
       }
     }
 
+
     .content_body {
       // padding-left: 300px;
       // width: calc(100% - 320px);
@@ -202,7 +300,7 @@ body {
       width: calc(100% - 40px);
       padding-left: 20px;
       padding-right: 20px;
-      padding-top: 20px;
+      padding-top: 40px;
       padding-bottom: 10px;
       text-align: center;
       float: right;
@@ -211,6 +309,7 @@ body {
       &.small_content {
         padding-left: 300px;
         width: calc(100% - 320px);
+
       }
     }
 
@@ -221,7 +320,7 @@ body {
       position: absolute;
       bottom: 0;
       width: 100%;
-      height: 25px;   /* Height of the footer */
+      height: 30px;   /* Height of the footer */
       background-color: rgba(187, 187, 187, 0.5);
     }
 
