--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @city.name%></h1>
 <% if @is_admin %>
-<%= link_to "Edit", edit_city_path(@city), class: "edit_link"%>
+<%= link_to "Edit", edit_city_path(@city), class: "edit_link"%> |
 
 <%= link_to "Delete", city_path(@city), class: "edit_link", method: :delete %>
 <% end %>
