--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,17 +24,23 @@
             <ul>
               <li>
               <% if @current_user.present?%>
-                  <%= link_to "Welcome " + @current_user.username, user_path(@current_user.id)%>
+                  <%= link_to "Welcome, " + @current_user.username, user_path(@current_user.id)%>
                   <% else %>
-                  <%= link_to 'Login', login_path%>
+                  <%= link_to 'Login', login_path%> /
+                  <%= link_to 'Sign Up', new_user_path %>
               <% end %>
               </li>
               <li>
-                  <%= link_to 'Cities', cities_path%>
+                <%= link_to 'Home', pages_path %>
               </li>
+              <li>
+                  <%= link_to 'Destinations', cities_path%>
+              </li>
+
               <li>
                   <%= link_to 'Blog Posts', posts_path%>
               </li>
+
               <% if @current_user.present?%>
               <li>
                   <%= link_to 'Logout', login_path, method: :delete%>
