--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,9 @@
   <body class="<%= controller_name %> <%=  action_name %>">
     <div class="wrapper">
 
-        <span class="menu"></span>
-
+        <div id="menu">
+          <!-- <span class="menu"></span> -->
+        </div>
         <div class="content_body">
           <%= yield %>
         </div>
