--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,12 +9,12 @@
 //   border-radius: 5px;
 // }
 
-.posts_individual{
-  overflow: auto;
-  display: inline-block;
-  max-width: 290px;
-  margin: 2px;
-}
+// .posts_individual{
+//   overflow: auto;
+//   display: inline-block;
+//   max-width: 290px;
+//   margin: 2px;
+// }
 
 #posts_div:hover{
   filter: saturate(120%);
