--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,25 @@
 <h1>Hello, My name is <%= @user.username %>!</h1>
-<h2>Welcome to my travel page</h2>
+<h3>Welcome to my travel page</h3>
 <!-- <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div> -->
 
 
-<div class="content_body">
-  <div id="blogpost">
-    <h3>Check out my blog posts</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+    <h4>Check out my blog posts</h4>
       <ul id="postdisplay">
         <% @user.posts.each do |post| %>
           <li>
-          <%= link_to post.title, post_path(post) %>
+          <%= link_to post.title, post_path(post), class: 'post_link' %>
           </li>
         <% end %>
       </ul>
       <%= cl_image_tag @user.image %>
     </div>
 
-  <div id="articles_show">
 
+  <div class="col-sm-6">
    <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div>
+   </div>
  </div>
+</div>
