--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,11 +1,16 @@
 <h1>Beautiful Cities of the World</h1>
-<% @cities.each do |city| %>
-  <div class="cities_individual" id="cities_div">
-    <strong><%= link_to city_path(city) do %></strong><br>
-      <div>
-        <li class="city_link"><%= city.name %></li>
-        <li><%= image_tag city.image %></li>
+<div class="container">
+  <div class="row">
+    <% @cities.each do |city| %>
+      <div class="col-sm-4">
+        <strong><%= link_to city_path(city) do %></strong><br>
+          <div>
+            <li class="city_link"><%= city.name %></li>
+            <li><%= image_tag city.image, class: 'post_main' %></li>
+          </div>
+        <% end %>
       </div>
-    </div>
+
     <% end %>
-<% end %>
+  </div>
+</div>
