removed unused css, added more seeds data

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,8 +25,9 @@
 @import "bootstrap";
 // google map for city show and blog posts show
 #map {
-  height: 500px !important;
-  width: 500px !important;
+  // height: 50% !important;
+  width: 100% !important;
+  padding-top: 100%; // using padding top to ensure aspect ratio.
   overflow: hidden !important;
   border-radius: 25px;
 }
@@ -37,10 +38,16 @@
   // width:
 
   height: 350px;
-  width: 1240px;
+  // width: 1240px;
+  width: 100%;
 }
 
 // show page for profile, ie User show page
+
+#articles {
+  font-size: 16px;
+  color: rgba(42, 42, 42, 0.8);
+}
 
 #postdisplay {
   font-size: 16px;
@@ -61,7 +68,8 @@
 }
 
 .MainContainer {
-  perspective: 1px;
+  // perspective: 1px;
+  // perspective: 0px;
   transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden;
@@ -74,8 +82,9 @@
   display: block;
   background-color: white;
   z-index: 1;
-  width: 1355px;
-  margin-left: 7px;
+  // width: 1355px;
+  width: 100%;
+  // margin-left: 1px;
 }
 
 .Content {
@@ -94,8 +103,10 @@
   flex: 1 0 auto;
   position: relative;
   z-index: -1;
-  height: 50vh;
-  width: 1355px;
+  // height: 50vh;
+  height: 107vh;
+  // width: 1355px;
+  width: 100%;
   justify-content: center;
   align-items: center;
   transform: translateZ(-1px) scale(2);
@@ -115,15 +126,6 @@
   overflow-y: scroll;
 }
 
-.ParallaxContainer {
-  display: flex;
-  flex: 1 0 auto;
-  position: relative;
-  height: 107vh;
-  transform: translateZ(-1px) scale(2);
-  z-index: -1;
-}
-
 .ContentContainer {
   display: block;
   position: relative;
@@ -134,7 +136,6 @@
 img.post_main {
   width: 300px;
   height: 200px;
-  // max-width: 290px;
   margin: 2px;
   filter: grayscale(70%) contrast(100%);
   transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -145,7 +146,7 @@ img.post_main {
 }
 
 
-img:hover{
+img:hover {
   filter: saturate(80%);
 }
 
@@ -156,7 +157,14 @@ p {
 
 a {
   text-decoration: none;
+  color: rgba(42, 42, 42, 0.8);
+  color: none;
 }
+
+#cities_div:hover{
+  filter: saturate(120%);
+}
+
 
 .city_link {
   color: rgba(42, 42, 42, 0.8);
@@ -165,24 +173,15 @@ a {
 
 .city_link:hover, #article:hover, a:hover {
   color: rgb(90, 17, 198);
-}
-
-#articles {
-  font-size: 16px;
-  color: rgba(42, 42, 42, 0.8);
+  text-decoration: none;
+  transform: scale(1.2);
 }
 
 #slideshow {
-    // margin: 50px auto;
     position: relative;
-    // width: 240px;
-    // height: 240px;
-    left: 10%;
-    // previously 700/500
-    width: 900px;
-    height: 610px; // 552 +30 + 20 + 8 - Previously 700
-    padding: 10px;
-    // box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    height: 350px;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 
 #slideshow > div {
@@ -194,7 +193,6 @@ a {
 }
 
 .slideshow_images {
-  // previously 660/460
   max-width: 792px;
   width: 792px;
   max-height: 552px;
@@ -206,8 +204,6 @@ a {
   float: left;
   margin-right: 40px;
   margin-bottom: 30px;
-  // width: 270px;
-  // height: 270px;
   overflow: hidden;
 }
 
@@ -216,7 +212,12 @@ a {
   padding: 20px 100px;
   vertical-align: middle;
   text-align: justify;
+}
 
+.slideshow_content_box {
+  overflow: hidden;
+  vertical-align: middle;
+  text-align: justify;
 }
 
 li {
@@ -237,10 +238,6 @@ h2 {
 
 }
 
-// #welcome_page {
-//   font-size: 40px;
-// }
-
 #welcome {
   margin: 0 auto;
   text-align: center;
@@ -260,7 +257,6 @@ h2 {
   margin-top: -9em; /*set to a negative number 1/2 of your height*/
   margin-left: -15em; /*set to a negative number 1/2 of your width*/
   border: 1px rgb(75, 169, 237);
-
   border-radius: 15px;
 }
 
@@ -270,8 +266,6 @@ h2 {
   left: 0;
   right: 0;
 }
-
-
 
 * {
   padding: 0;
@@ -283,7 +277,6 @@ body {
   position: relative;
   font-family: 'Open Sans', sans-serif;
   background-attachment: fixed;
-  // background-image: url('https://www.publicdomainpictures.net/pictures/30000/velka/beach-background.jpg');
   background-image: url('https://images.pexels.com/photos/21859/pexels-photo.jpg');
   background-position: center;
   background-repeat: no-repeat;
@@ -293,7 +286,6 @@ body {
   .wrapper {
     width: 100%;
     min-height: 100%;
-    // height: 100vh;
     background-color: none;
     position: absolute;
     background-size: cover;
@@ -303,61 +295,23 @@ body {
     div#menu {
       z-index: 999999;
       cursor: pointer;
-      border: 1px solid red;
       display: block;
       position: absolute;
-      width: 35px;
-      height: 35px;
-      top: 20px;
-      left: 30px;
-      background-image: url('https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png');
-      background-repeat: no-repeat;
+      width: 65px;
+      height: 65px;
+      top: 10px;
+      left: 10px;
+      background: url('https://cdn4.iconfinder.com/data/icons/tupix-1/30/list-512.png') no-repeat center center;
+      background-size: cover;
       padding: 0;
       text-indent: 9999px;
-
-
     }
-
-    //
-    // span.menu {
-    //   z-index: 9999;
-    //   position: relative;
-    //   // top: 20px;
-    //   // left: 30px;
-    //   width: 35px;
-    //   height: 4px;
-    //   background: rgba(42, 42, 42, 0.8);
-    //
-    //   &:before, &:after {
-    //     display: block;
-    //     position: absolute;
-    //     content: '';
-    //     left: 0;
-    //     height: 4px;
-    //     width: 35px;
-    //     // background: black;
-    //     background: rgba(42, 42, 42, 0.8);
-    //   }
-    //
-    //
-    //
-    //   &:before {
-    //     top: -8px;
-    //   }
-    //
-    //   &:after {
-    //     bottom: -8px;
-    //   }
-    // }
 
 
     .content_body {
-      // padding-left: 300px;
-      // width: calc(100% - 320px);
-
       width: calc(100% - 40px);
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 40px;
+      padding-right: 80px;
       padding-top: 40px;
       padding-bottom: 10px;
       text-align: center;
@@ -367,7 +321,6 @@ body {
       &.small_content {
         padding-left: 10px;
         width: calc(100% - 320px);
-
       }
     }
 
@@ -394,7 +347,6 @@ body {
 
       h1 {
         color: #b3b5b5;
-
       }
     }
 
@@ -445,8 +397,6 @@ body {
             padding: 10px 0;
             overflow: hidden;
 
-
-
             &:after {
               display: block;
               border-radius: 2px;
@@ -454,7 +404,6 @@ body {
               left: 0;
               bottom: -10px;
               height: 2px;
-              // background: #ffffff;
               background: rgba(42, 42, 42, 0.8);
               transform: translateX(-101%);
             }
@@ -478,7 +427,6 @@ body {
               transform: translateX(0);
             }
           }
-
         }
       }
     }
@@ -512,10 +460,3 @@ body {
     }
   }
 }
-
-
-
- body.pages.home .overlay {
-   font-family: 'Helvetica' !important;
-
-  }
