--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,8 @@
 
 
   <div class="col-sm-6">
-   <div id="articles" data-article="<%= @user.address %>">Loading news from your hometown now...</div>
+   <h4>News from my hometown, <%= @user.address %></h4>
+   <div id="articles" data-article="<%= @user.address %>">Loading now...</div>
    </div>
  </div>
 </div>
