--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
   <%= link_to "Edit", edit_post_path(@post), class: "edit_link"%> |
   <%= link_to "Delete", post_path(@post), class: "edit_link", method: :delete%>
   <% end %>
+  <div class="content_box">
   <% if @post.image.present? %>
     <%= cl_image_tag @post.image, class: 'header_image' %>
   <% else %>
@@ -30,8 +31,7 @@
         </div>
           </div>
         </div>
-
-
+</div>
 
 
 
