--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -36,6 +36,8 @@ a {
 }
 .delete_comment{
   font-size: 16px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 #comments_div > p {
   text-align: left;
@@ -44,4 +46,16 @@ a {
 #comments_div > a {
   text-align: right;
   float: right;
+}
+.comment_div{
+  text-align: left;
+  border-style: ridge;
+  // background-color: rgb(168, 222, 233);
+}
+#comments_div{
+  // background-color: rgb(168, 222, 233);
+  width: 800px;
+  margin-left: 200px;
+  border-style: outset;
+  padding-left: 20px;
 }
