added likes to post

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -460,3 +460,12 @@ body {
     }
   }
 }
+.fa {
+    font-size: 30px !important;
+    cursor: pointer;
+    user-select: none;
+}
+
+.fa:hover {
+  color: darkblue;
+}
