--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Beautiful Cities of the World</h1>
+<h1><strong>Beautiful Cities of the World</strong></h1>
 <div class="container">
   <div class="row">
     <% @cities.each do |city| %>
