--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
         <div class="overlay">
             <ul>
-              <li>
+              <li class=city_link>
               <% if @current_user.present?%>
                   <%= link_to "Welcome, " + @current_user.username, user_path(@current_user.id)%>
                   <% else %>
@@ -31,19 +31,19 @@
                   <%= link_to 'Sign Up', new_user_path %>
               <% end %>
               </li>
-              <li>
+              <li class=city_link>
                 <%= link_to 'Home', pages_path %>
               </li>
-              <li>
+              <li class=city_link>
                   <%= link_to 'Destinations', cities_path%>
               </li>
 
-              <li>
+              <li class=city_link>
                   <%= link_to 'Blog Posts', posts_path%>
               </li>
 
               <% if @current_user.present?%>
-              <li>
+              <li class=city_link>
                   <%= link_to 'Logout', login_path, method: :delete%>
               </li>
               <% end %>
